Fixed top button css on mobile

--- a/css/showboat_Feb19.css
+++ b/css/showboat_Feb19.css
@@ -443,6 +443,12 @@ MEDIA QUERIES
         top: 0px;
         margin: auto;
     }
+    
+    
+    .redbutton {
+    font-size: 1em;
+    }
+    
 
     .email {
         width: 70%;   
